sas-core/main/default/objects/CARE_Claim__c/CARE_Claim__c.object-meta.xml
<CustomObject>
    <description>A claim which has been handled in CARE.</description>
    <label>CARE Claim</label>
    <nameField>
        <label>CARE Claim Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>