sas-core/main/default/objects/CARE_Claim__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>