sas-core/main/default/objects/CARE_Claim__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <externalId>true</externalId>
    <label>Case Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>