sas-core/main/default/objects/CARE_Claim__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>