sas-core/main/default/objects/CARE_Claim__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <label>Customers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>