sas-core/main/default/objects/CARE_Claim__c/fields/Date_Closed_In_CARE__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed_In_CARE__c</fullName>
    <label>Date Closed In CARE</label>
    <type>DateTime</type>
</CustomField>