sas-core/main/default/objects/CARE_Claim__c/fields/Date_Created_In_CARE__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_In_CARE__c</fullName>
    <label>Date Created In CARE</label>
    <type>DateTime</type>
</CustomField>