sas-core/main/default/objects/CARE_Claim__c/fields/Decisions__c.field-meta.xml
<CustomField>
    <fullName>Decisions__c</fullName>
    <label>Decisions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>