sas-core/main/default/objects/CARE_Claim__c/fields/Duplicate_Matcher__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Matcher__c</fullName>
    <formula>Booking_Reference__c  &amp; &apos;-&apos;  &amp;  Flight_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Matcher</label>
    <type>Text</type>
</CustomField>