sas-core/main/default/objects/CARE_Claim__c/fields/Last_Modified_In_CARE__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_In_CARE__c</fullName>
    <label>Last Modified In CARE</label>
    <type>DateTime</type>
</CustomField>