sas-core/main/default/objects/CARE_Claim__c/fields/Settlements__c.field-meta.xml
<CustomField>
    <fullName>Settlements__c</fullName>
    <label>Settlements</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>